gsuiKeys: fix, CSS, remove a z-index:0, to let all the blocks being above the rows

--- a/gsuiKeys/gsuiKeys.css
+++ b/gsuiKeys/gsuiKeys.css
@@ -19,7 +19,6 @@
 .gsuiKey-row {
 	position: absolute;
 	box-sizing: border-box;
-	z-index: 0;
 	width: 100%;
 	height: 1em;
 }
